Исправления и доработки
